SERVER-107409 Disallow $rankFusion and $score in subpipelines of view definitions (#38426)

Co-authored-by: Joe Shalabi <joseph.shalabi@mongodb.com>
GitOrigin-RevId: 6adb74e93e6b27e29919741c2fee8cbb3f92e8ad