src/mongo/db/views/view_catalog_helpers.cpp
@@ -83,15 +83,7 @@ StatusWith<stdx::unordered_set<NamespaceString>> validatePipeline(OperationConte
     //       '$_internalUnpackBucket'.
     bool performApiVersionChecks = !viewDef.timeseries();
     liteParsedPipeline.validate(opCtx, performApiVersionChecks);
-
-    // TODO SERVER-101721 Enable $rankFusion run in a view definition.
-    uassert(ErrorCodes::OptionNotSupportedOnView,
-            "$rankFusion is currently unsupported in a view definition",
-            !liteParsedPipeline.hasRankFusionStage());
-
-    uassert(ErrorCodes::OptionNotSupportedOnView,
-            "$score is currently unsupported in a view definition",
-            !liteParsedPipeline.hasScoreStage());
+    liteParsedPipeline.checkStagesAllowedInViewDefinition();
 
     // Verify that this is a legitimate pipeline specification by making sure it parses
     // correctly. In order to parse a pipeline we need to resolve any namespaces involved to a
